--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,8 @@ dependencies:
   pin_code_fields: ^7.4.0
   provider: ^6.0.2
   shared_preferences: ^2.0.15
+  sembast: ^3.2.0+1
+  pretty_dio_logger: ^1.2.0-beta-1
   flutter:
     sdk: flutter
 
@@ -84,6 +86,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/svg/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
