--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   shared_preferences: ^2.0.15
   sembast: ^3.2.0+1
   pretty_dio_logger: ^1.2.0-beta-1
+  flutter_animation_progress_bar: ^2.2.1
   flutter:
     sdk: flutter
 
