--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   sembast: ^3.2.0+1
   pretty_dio_logger: ^1.2.0-beta-1
   flutter_animation_progress_bar: ^2.2.1
+
   flutter:
     sdk: flutter
 
@@ -61,6 +62,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  cloud_firestore: ^4.0.4
+  firebase_auth: ^4.1.1
+
 
 dev_dependencies:
   flutter_test:
