--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,9 @@ dependencies:
   sembast: ^3.2.0+1
   pretty_dio_logger: ^1.2.0-beta-1
   flutter_animation_progress_bar: ^2.2.1
+  file_picker: ^5.2.2
+  firebase_storage: ^11.0.4
+  firebase_core: ^2.1.1
 
   flutter:
     sdk: flutter
